# xInsp2

./: .gitignore  BugAudit.md  CONTRIBUTING.md  DEV_PLAN.md  FRAMEWORK.md  NewDeal.md  README.md  STATUS.md  TEST_PLAN.md  TEST_REPORT.md  TestAudit.md
backend/: CMakeLists.txt
backend/include/xi/: xi.hpp  xi_abi.h  xi_abi.hpp  xi_async.hpp  xi_atomic_io.hpp  xi_baseline.hpp  xi_breakpoint.hpp  xi_cert.hpp  xi_image.hpp  xi_image_pool.hpp  xi_instance.hpp  xi_instance_folders.hpp  xi_io.hpp  xi_ipc.hpp  xi_jpeg.hpp  xi_json.hpp  xi_ops.hpp  xi_ops_cv.hpp  xi_ops_ipp.hpp  xi_param.hpp  xi_plugin_handle.hpp  xi_plugin_manager.hpp  xi_plugin_support.hpp  xi_process_instance.hpp  xi_project.hpp  xi_protocol.hpp  xi_record.hpp  xi_script.hpp  xi_script_compiler.hpp  xi_script_loader.hpp  xi_script_process_adapter.hpp  xi_script_support.hpp  xi_seh.hpp  xi_sha256.hpp  xi_shm.hpp  xi_source.hpp  xi_state.hpp  xi_test.hpp  xi_thread.hpp  xi_trigger_bridge.hpp  (+5 more)
backend/src/: runner_main.cpp  script_runner_main.cpp  service_main.cpp  stb_impl.cpp  worker_main.cpp  xi_image_io.cpp
backend/tests/: bench_jpeg.cpp  bench_ops.cpp  test_diagnostics.cpp  test_hang_plugin.cpp  test_image_pool.cpp  test_image_pool_stress.cpp  test_isolated_instance.cpp  test_ops.cpp  test_protocol.cpp  test_record.cpp  test_script_process_adapter.cpp  test_script_runner.cpp  test_script_runner_dll.cpp  test_script_runner_respawn.cpp  test_sha256.cpp  test_shm_ipc_edges.cpp  test_worker.cpp  test_worker_plugin.cpp  test_worker_respawn.cpp  test_worker_timeout.cpp  test_xi_core.cpp  test_xi_shm.cpp
examples/: CMakeLists.txt  cancel_aware_script.cpp  defect_detection.cpp  demo_async.cpp  plugin_handle_demo.cpp  record_demo.cpp  use_demo.cpp  user_script_example.cpp  user_with_instance.cpp
examples/blob_tracker/: PLAN.md  RESULTS.md  driver.py  generate.py  ground_truth.json  inspect.cpp  project.json
examples/burst_dispatch/: driver.py  driver_overflow.py  inspect.cpp  project.json
examples/burst_dispatch/instances/det/: instance.json
examples/burst_dispatch/plugins/slow_detector/: plugin.json
examples/burst_pipeline/: PLAN.md  RESULTS.md  driver.py  inspect.cpp  project.json
examples/burst_pipeline/instances/classifier/: instance.json
examples/burst_pipeline/instances/source0/: instance.json
examples/burst_pipeline/plugins/frame_source/: plugin.json
examples/circle_counting/: .gitignore  PLAN.md  RESULTS.md  RESULTS_v2.md  debug_one.py  driver.py  driver_v2.py  generate.py  ground_truth.json  inspect.cpp  project.json  proto.py
examples/circle_size_buckets/: .gitignore  PLAN.md  RESULTS.md  driver.py  generate.py  ground_truth.json  inspect.cpp  project.json
examples/config_validation_demo/: README.md  driver.py  inspect.cpp  project.json
examples/crash_recovery/: PLAN.md  RESULTS.md  backend.log.err  driver.py  generate.py  ground_truth.json  inspect.cpp  project.json
examples/crash_recovery2/: PLAN.md  RESULTS.md  driver.py  generate.py  ground_truth.json  inspect.cpp  project.json
examples/crash_recovery3/: PLAN.md  RESULTS.md  driver.py  generate.py  ground_truth.json  inspect.cpp  project.json
examples/crash_tests/: array_overrun.cpp  cpp_exception.cpp  div_zero.cpp  null_deref.cpp
examples/cross_proc_trigger/: driver.py  inspect.cpp  project.json
examples/fl_r7_fuzz/: FRICTION_FUZZ.md  RESULTS.md  _common.py  _control_evil.py  _minimize_ws_crash.py  evil_worker.cpp  harness_config.py  harness_emit_trigger.py  harness_evil_worker_host.py  harness_ws_cmd.py  run_all.py
examples/golden_defect/: .gitignore  PLAN.md  RESULTS.md  driver.py  generate.py  ground_truth.json  inspect.cpp  project.json
examples/hot_reload_run/: PLAN.md  RESULTS.md  inspect_v1.cpp  inspect_v2.cpp  run.py
examples/hot_reload_run2/: PLAN.md  RESULTS.md  driver.py  inspect_v1.cpp  inspect_v2.cpp
examples/hue_tune/: PLAN.md  RESULTS.md  driver.py  generate.py  ground_truth.json  inspect.cpp  project.json
examples/live_tune/: PLAN.md  RESULTS.md  driver.py  generate.py  ground_truth.json  inspect.cpp  project.json
examples/multi_source_surge/: FRICTION.md  RESULTS.md  driver.py  inspect.cpp  project.json
examples/multi_source_surge2/: FRICTION.md  RESULTS.md  driver.py  inspect.cpp  inspect_collision.cpp  project.json
examples/stereo_sync/: PLAN.md  RESULTS.md  driver.py  inspect.cpp  project.json
examples/stereo_sync2/: PLAN.md  RESULTS.md  driver.py  inspect.cpp  project.json
examples/trend_monitor/: PLAN.md  RESULTS.md  driver.py  generate.py  ground_truth.json  inspect.cpp  project.json
plugins/: CMakeLists.txt
plugins/blob_analysis/: blob_analysis.cpp  plugin.json
plugins/blob_analysis/ui/: index.html
plugins/data_output/: data_output.cpp  plugin.json
plugins/json_source/: json_source.cpp  plugin.json
plugins/json_source/ui/: index.html
plugins/mock_camera/: mock_camera.cpp  plugin.json
plugins/mock_camera/ui/: index.html
plugins/record_save/: plugin.json  record_save.cpp
plugins/record_save/ui/: index.html
plugins/synced_stereo/: plugin.json  synced_stereo.cpp
sdk/: CMakeLists.txt  GETTING_STARTED.md  README.md  create_plugin.sh  scaffold.mjs
sdk/cmake/: xinsp2_plugin.cmake
sdk/examples/counter/: CMakeLists.txt  counter.cpp  plugin.json
sdk/examples/hello/: CMakeLists.txt  hello.cpp  plugin.json
sdk/examples/histogram/: CMakeLists.txt  histogram.cpp  plugin.json
sdk/examples/invert/: CMakeLists.txt  invert.cpp  plugin.json
sdk/examples/trigger_source/: CMakeLists.txt  plugin.json  trigger_source.cpp
sdk/scaffold/: render.mjs
sdk/template/: CMakeLists.txt  README.md  my_plugin.cpp  plugin.json
sdk/template/tests/: test_native.cpp  test_ui.cjs
sdk/template/ui/: index.html
sdk/templates/_shared/: image_viewer_widget.html
sdk/templates/easy/: plugin.json.tpl
sdk/templates/expert/: CMakeLists.txt.standalone  README.md.standalone  plugin.json.tpl
sdk/testing/: e2e_entry.cjs  helpers.cjs  run_ui_test.mjs
tools/xinsp2_py/: README.md  pyproject.toml
tools/xinsp2_py/xinsp2/: __init__.py  client.py  screenshot.py  snapshot.py
(+163 files in other folders)
