[project]
name = "xinsp2"
version = "0.1.0"
description = "Python client for the xInsp2 backend WS protocol — drives compile/run/inspect cycles and dumps run snapshots for AI workflows."
requires-python = ">=3.10"
dependencies = [
    "websocket-client>=1.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xinsp2*"]
